fixed footer alignment

--- a/css/mediaQueries.scss
+++ b/css/mediaQueries.scss
@@ -118,7 +118,7 @@
       margin-bottom: 20px;
     }
     }
-  }
+  
 
 
   #article_link_1 .popular_link {
@@ -131,40 +131,29 @@
 
   /*FOOTER*/
 
-  footer {
-    text-align: center;
-  }
-  .foot_wrap {
-    max-width: 320px;
-    width: $media_size;
-    margin: auto;
-  }
-  footer {
-    nav {
-      &:first-child {
+footer {
+  text-align: center; }
+.foot_wrap {
+      max-width: 320px;
+      width: 100%;
+      margin: auto; }
+footer nav:first-child {
         display: inline-block;
         float: none;
-        vertical-align: top;
-      }
-      &:last-child {
-        display:none;
-      }
-    }
-      p {
-        clear: both;
-        text-align: center;
-        display: inline;
-        font-size: 1.1em;
-      }
-      img {
-        text-align: center;
-        display: block;
-        margin: 10px auto;
-        vertical-align: bottom;
-        padding-right: 22px;
-    }
-  }
-
+        vertical-align: top; }
+footer nav:last-child {
+          display: none; }
+footer p {
+            clear: both;
+            text-align: center;
+            display: inline;
+            font-size: 1.1em; }
+footer img {
+              text-align: center;
+              display: block;
+              margin: 10px auto;
+              vertical-align: bottom;
+              padding-right: 22px; } }
 
 
 @media screen and (min-width:321px) and (max-width:549px) {
@@ -328,34 +317,28 @@
     margin: auto;
   }
   footer {
-    nav {
-      &:first-child {
+    text-align: center; }
+    .foot_wrap {
+      max-width: 525px;
+      width: 100%;
+      margin: auto; }
+      footer nav:first-child {
         display: inline-block;
         float: none;
-        vertical-align: top;
-      }
-      &:last-child {
-        display:none;
-      }
-    }
-    p {
-      clear: both;
-      text-align: center;
-      display: inline;
-      font-size: 1.1em;
-    }
-    img {
-      text-align: center;
-      display: block;
-      margin: 10px auto;
-      vertical-align: bottom;
-      padding-right: 22px;
-    }
-
-  }
-
-
-}
+        vertical-align: top; }
+        footer nav:last-child {
+          display: none; }
+          footer p {
+            clear: both;
+            text-align: center;
+            display: inline;
+            font-size: 1.1em; }
+            footer img {
+              text-align: center;
+              display: block;
+              margin: 10px auto;
+              vertical-align: bottom;
+              padding-right: 22px; } }
 
 @media screen and (min-width:550px) and (max-width:800px) {
 
@@ -465,34 +448,22 @@
   /*FOOTER*/
 
   footer {
-    text-align: center;
-  }
-  .foot_wrap {
-    max-width: 800px;
-    width: $media_size;
-    margin: auto;
-  }
-  footer {
-    nav {
-      &:first-child {
+    text-align: center; }
+    .foot_wrap {
+      max-width: 800px;
+      width: 100%;
+      margin: auto; }
+      footer nav:first-child {
         display: inline-block;
         float: none;
-        vertical-align: top;
-      }
-      &:last-child {
-        display:none;
-      }
-    }
-    img {
-      text-align: center;
-      display: block;
-      margin: 10px auto;
-      vertical-align: bottom;
-      padding-right: 22px;
-    }
-    p{
-      display: none;
-    }
-  }
-
-}
+        vertical-align: top; }
+        footer nav:last-child {
+          display: none; }
+          footer img {
+            text-align: center;
+            display: block;
+            margin: 10px auto;
+            vertical-align: bottom;
+            padding-right: 22px; }
+            footer p {
+              display: none; } }
